# freebird_firmware

./: .gitignore  Cargo.toml  memory.x
.cargo/: config.toml
src/: bmp.rs  defmt_config.rs  executor.rs  i2c.rs  linalg.rs  lsm.rs  main.rs  quaternions.rs  ukf.rs  ukf2.rs  usart.rs
