[package]
name = "avum-rs"
version = "0.1.0"
authors = ["Daniel Avishai Stutman <git@stutman.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
stm32f3 = { version = "0.11.0", features = ["stm32f303", "rt"] }
atomic = "0.5.0"
futures = { version = "0.3.5", default-features = false }
defmt = { git = "https://github.com/knurling-rs/defmt", branch = "main" }
defmt-rtt = { git = "https://github.com/knurling-rs/defmt", branch = "main" }

[features]
default = [
    "defmt-default"
]
defmt-default = []
