[package]
name = "avum-rs"
version = "0.1.0"
authors = ["Daniel Avishai Stutman <git@stutman.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
stm32f3 = { version = "0.11.0", features = ["stm32f303", "rt"] }
atomic = "0.5.0"
futures = { version = "0.3.5", default-features = false }
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }

[features]
default = [
    "defmt-default"
]
defmt-default = []

[profile.release]
debug = 1